# EWaveCore

./: CLFUNC.cpp  CLFUNC.h  CMakeLists.txt  eWaveCore.h  envSpawn.cpp  envSpawn.h  formatDefinitions.cpp  formatDefinitions.h  main.cpp  main.h  raySpawn.cpp  raySpawn.h
kernels/: F_REFV1.cl
